fix footer issue on mobile

--- a/app/src/components/layout/layout.css
+++ b/app/src/components/layout/layout.css
@@ -85,17 +85,6 @@
 .modal-button-icon {
   cursor: pointer;
 }
-.modal-button-link {
-  visibility: hidden;
-  height: 0;
-  width: 0;
-  margin: 0;
-}
-.modal-button-link img {
-  height: 0;
-  width: 0;
-  margin: 0;
-}
 .modal-button-modal {
   position: absolute;
   top: 40px;
@@ -150,6 +139,12 @@
     height: 100%;
     min-width: 0;
   }
+  .contact-panel {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+  }
   .contact-panel a {
     margin-right: 1em;
   }
@@ -162,11 +157,5 @@
   .modal-button-modal {
     width: 80vw;
     height: 80vw;
-  }
-  .modal-button-icon {
-    visibility: hidden;
-  }
-  .modal-button-link {
-    
   }
 }
