--- a/app/src/components/layout/menuButton.css
+++ b/app/src/components/layout/menuButton.css
@@ -51,6 +51,45 @@
   text-align: center;
 }
 
+@media only screen and (max-width: 1500px) { 
+  .menu-button {
+    width: 200px;
+    height: 50px;
+    border-radius: 100px;
+  }
+  .menu-button-icon {
+    width: 40px;
+    height: 35.8px;
+    top: 7px;
+    left: 37px;
+    object-fit: contain;
+  }
+  .menu-button-text {
+    width: 142px;
+    height: 39px;
+    top: 6px;
+    left: 57px;
+  }
+  .index-menu-button {
+    width: 200px;
+    height: 50px;
+    border-radius: 100px;
+  }
+  .index-menu-button-icon {
+    width: 40px;
+    height: 35.8px;
+    top: 7px;
+    left: 37px;
+    object-fit: contain;
+  }
+  .index-menu-button-text {
+    width: 142px;
+    height: 39px;
+    top: 6px;
+    left: 57px;
+  }
+}
+
 @media only screen and (max-width: 800px) { 
   .menu-button {
     width: 50px;
