--- a/app/src/style.css
+++ b/app/src/style.css
@@ -39,7 +39,7 @@ iframe {
 .font-size-20 {
   font-size: 20px;
 }
-.font-size-20-12 {
+.font-size-20-15 {
   font-size: 20px;
 }
 .font-size-24 {
@@ -47,7 +47,7 @@ iframe {
 }
 
 @media only screen and (max-width: 800px) { 
-  .font-size-20-12 {
-    font-size: 12px;
+  .font-size-20-15 {
+    font-size: 15px;
   }
 }
